--- a/package.json
+++ b/package.json
@@ -12,22 +12,24 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "chart.js": "^3.9.1",
     "next": "13.0.3",
     "react": "18.2.0",
+    "react-chartjs-2": "^4.3.1",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
-    "eslint": "8.27.0",
-    "eslint-config-next": "13.0.3",
     "@typescript-eslint/eslint-plugin": "^5.43.0",
     "@typescript-eslint/parser": "^5.43.0",
+    "eslint": "8.27.0",
+    "eslint-config-next": "13.0.3",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-unused-imports": "^2.0.0",
+    "husky": "^8.0.0",
     "prettier": "^2.7.1",
-    "typescript": "4.9.3",
-    "husky": "^8.0.0"
+    "typescript": "4.9.3"
   }
 }
