--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "chart.js": "^3.9.1",
+    "date-fns": "^2.29.3",
     "next": "13.0.3",
     "react": "18.2.0",
     "react-chartjs-2": "^4.3.1",
