--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "next": "13.0.3",
     "react": "18.2.0",
     "react-chartjs-2": "^4.3.1",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-draggable": "4.4.5"
   },
   "devDependencies": {
     "@types/node": "18.11.9",
