--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
   },
   "dependencies": {
     "chart.js": "^3.9.1",
+    "chartjs-adapter-date-fns": "^2.0.1",
+    "clsx": "^1.2.1",
     "daisyui": "^2.42.1",
     "date-fns": "^2.29.3",
+    "lodash.groupby": "^4.6.0",
     "next": "13.0.3",
     "react": "18.2.0",
     "react-chartjs-2": "^4.3.1",
@@ -22,6 +25,7 @@
     "react-draggable": "4.4.5"
   },
   "devDependencies": {
+    "@types/lodash.groupby": "^4.6.7",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
