--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "daisyui": "^2.42.1",
     "date-fns": "^2.29.3",
     "lodash.groupby": "^4.6.0",
+    "lodash.merge": "^4.6.2",
     "next": "13.0.3",
     "react": "18.2.0",
     "react-chartjs-2": "^4.3.1",
@@ -26,6 +27,7 @@
   },
   "devDependencies": {
     "@types/lodash.groupby": "^4.6.7",
+    "@types/lodash.merge": "^4.6.7",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
