--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next": "13.0.3",
     "react": "18.2.0",
     "react-chartjs-2": "^4.3.1",
+    "react-date-range": "^1.4.0",
     "react-dom": "18.2.0",
     "react-draggable": "4.4.5"
   },
@@ -30,6 +31,7 @@
     "@types/lodash.merge": "^4.6.7",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
+    "@types/react-date-range": "^1.4.4",
     "@types/react-dom": "18.0.9",
     "@typescript-eslint/eslint-plugin": "^5.43.0",
     "@typescript-eslint/parser": "^5.43.0",
