--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "next": "13.0.3",
     "react": "18.2.0",
     "react-chartjs-2": "^4.3.1",
+    "react-countup": "^6.4.0",
     "react-date-range": "^1.4.0",
     "react-dom": "18.2.0",
     "react-draggable": "4.4.5"
